@startuml
'https://plantuml.com/class-diagram

class Grid{
    //以gridSize为单位的坐标 0,0是地图origin
    int16 x;
    int16 y;
    int sectorID;
    uint8 cost;
    bit4 primaryJump;
    int16[4] straightJump; 
    int16[4] diagonalJump;
    uint8 portalId;
}

Grid --*Sector

class Sector{
    //x|y
    int16/32 id; 
    //以sectorSize为单位的坐标 0,0是地图origin
    uint8/16 x; 
    uint8/16 y;
    Grid[] grids;
}
Sector --*Map

class Map{
    int id;
    string name;
    Vector2 origin;
    float gridSize;
    Sector[] sectors;
    Dict<int,int> sectorIdToIndex;
    Portal[] portals;
}

class Portal
{
    uint8 portalId;
    int mapId;
    int sectorId;
}

legend 用portal支持3D地图（上下会重叠的）和多地图导航

@enduml